合并端口为11123，使用OSC来路由各数值

--- a/Mac_HZLBlue4.0Demo/MAC_HZLBlue4.0Demo/Base.lproj/Main.storyboard
+++ b/Mac_HZLBlue4.0Demo/MAC_HZLBlue4.0Demo/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                             <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide MAC_HZLBlue4.0Demo" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Hide HZLBlue4.0ForMaxMsp" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -48,7 +48,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit MAC_HZLBlue4.0Demo" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit HZLBlue4.0ForMaxMsp" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -661,7 +661,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="MAC_HZLBlue4.0Demo Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="HZLBlue4.0ForMaxMsp Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
                                                 <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
@@ -707,7 +707,7 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="516" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w6S-WN-q54">
@@ -729,46 +729,64 @@
                                 </connections>
                             </containerView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fce-A2-r0N">
-                                <rect key="frame" x="21" y="121" width="441" height="21"/>
+                                <rect key="frame" x="18" y="124" width="477" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="11123：信号，电量，眨眼，温度，心率，Attention，Meditation，波段×8" id="MFF-LJ-qhf">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="/brainwave：信号，电量，grind，温度，心率，Attention，Meditation，波段×8" id="MFF-LJ-qhf">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dje-6C-leb">
-                                <rect key="frame" x="21" y="79" width="441" height="21"/>
+                                <rect key="frame" x="18" y="88" width="441" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="11124：原始脑波数据（更新频率约0.03s，每次10个值）" id="CIS-3l-smX">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="/sensordataraw：原始脑波数据（更新频率约0.03s，每次10个值）" id="CIS-3l-smX">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o6P-ZW-EMA">
-                                <rect key="frame" x="21" y="59" width="441" height="21"/>
+                                <rect key="frame" x="18" y="59" width="441" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="11124：眨眼强度（更新频率约0.03s）" id="ttk-Ib-4jC">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="/eyeblink：眨眼强度（更新频率约0.03s）" id="ttk-Ib-4jC">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vJE-DT-6Lh">
-                                <rect key="frame" x="21" y="38" width="446" height="21"/>
+                                <rect key="frame" x="18" y="30" width="446" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="11126：x轴角度     11127：y轴角度     11128：z轴角度（更新频率约0.5s）" id="uMO-FM-M9r">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="/x：x轴角度     /y：y轴角度     /z：z轴角度（更新频率约0.5s）" id="uMO-FM-M9r">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZVg-ol-vdc">
-                                <rect key="frame" x="187" y="99" width="111" height="21"/>
+                                <rect key="frame" x="189" y="108" width="111" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="（更新频率约1s）" id="4Jf-Of-0gL">
-                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dtg-Dj-NaC">
+                                <rect key="frame" x="18" y="145" width="111" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="OSC地址" id="WKm-DK-XLN">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vet-I0-Z2k">
+                                <rect key="frame" x="189" y="137" width="170" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="端口号11123 " id="8EG-Ka-zPW">
+                                    <font key="font" size="24" name=".PingFangSC-Regular"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
@@ -778,7 +796,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="93" y="655"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="GcM-du-R9Z">
